syntax = "proto3";

package pb;

option go_package = "./pb";

import "pb/post.proto";

message PostResponse {
  Post post = 1;
}

message DeletePostResponse {
  string status = 1;
  string user_id = 2; // The ID of the user who originally created the post
}